# conan_component_test

./: CMakeLists.txt  conanfile.py
include/: my_unicode_lib.h
src/: my_unicode_lib.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
